# SSHC

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  lib.rs  main.rs  ssh_config.rs  terminal.rs  ui.rs
src/config/: mod.rs  ssh_config.rs
src/core/: app.rs  mod.rs  terminal.rs
src/ui/: mod.rs
src/utils/: error.rs
