[package]
name = "ssh-tui"
version = "0.1.0"
edition = "2024"
authors = ["Akaere Networks"]
license = "AGPL-3.0"
description = "A Terminal User Interface for SSH connection management"
repository = "https://github.com/Akaere-NetWorks/SSHC"

[dependencies]
crossterm = "0.27"
ratatui = "0.24"
home = "0.5"
anyhow = "1.0"
